--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "webpack": "^2.6.1"
   }
 }
